make all managers Java8 compatible